--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
-
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
@@ -14,6 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="12dp"
+        android:onClick="goContactsActivity"
         android:layout_marginEnd="18dp"
         app:srcCompat="@drawable/baseline_call_24" />
 
@@ -24,28 +24,34 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="17dp"
+        android:onClick="goInfoActivity"
+        android:layout_marginTop="12dp"
         app:srcCompat="@drawable/baseline_info_24" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="332dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/textView6"
-        android:layout_marginTop="16dp"
-        android:scrollbars="vertical" />
+        android:layout_marginTop="10dp"
+        android:scrollbars="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="horizontal" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+        android:layout_width="108dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="178dp"
+        android:layout_marginStart="112dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="112dp"
+        android:layout_toStartOf="@+id/imageView3"
+        android:layout_toEndOf="@+id/imageView2"
         android:fontFamily="@font/doloman"
+        android:gravity="center"
         android:text="Граф"
-        android:textSize="28dp" />
+        android:textSize="94px" />
 
     <ImageView
         android:id="@+id/imageView5"
@@ -67,10 +73,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="21dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="163dp"
         android:fontFamily="@font/doloman"
-        android:text="Свадебные платья"
+        android:text="Каталог"
         android:textSize="32dp" />
 
 </RelativeLayout>
